--- a/node-lab1/package.json
+++ b/node-lab1/package.json
@@ -14,6 +14,8 @@
     "@babel/core": "^7.28.5",
     "@babel/node": "^7.28.0",
     "@babel/preset-env": "^7.28.5",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^9.39.1",
     "nodemon": "^3.1.11"
   },
   "dependencies": {
