--- a/tasky-api/package.json
+++ b/tasky-api/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "babel-node index.js",
     "dev": "nodemon --exec npm start"
-},
+  },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/eslint-parser": "^7.28.5",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "uuid": "^13.0.0"
   }
 }
